Improve amor requst